Changelog for Articles.

Articles 1.7.3
===============================
 - Change package name from Articles to articles for xPDO compatibility

Articles 1.7.2
===============================
 - Rebuilt tagging component. Thanks to Jan Peca (TheBoxer)

Articles 1.7.1
===============================
 - #20 Improve RTE on Create Stability
 - #24 Fix pasting predefined comma separated tags in tags field

Articles 1.7.0
===============================
 - #14 Long anticipated type ahead for tags (uses superboxselect thanks to TheBoxer)

Articles 1.6.9
===============================
 - #14 Ensure modx.com Package Provider is always correct when installing subpackages - thanks to Bob Ray
 - #16 Fix post to Twitter - thanks to mintnl
 - #7 Fix No RTE on Create w/ TinyMCE
 - Fixed sorting articles in grid - thanks to TheBoxer

Articles 1.6.8
===============================
 - Fix Broken Preview URLs after initial save (Issue 9)

Articles 1.6.7
===============================
 - Fix Empty Checkbox being unticked on Article Save (Issue 8)

Articles 1.6.6
===============================
- Set depth to 0 when looking for Article Container children
- added Clear Cache checkbox to Article Publishing Information panel
- Fixed right click Article Container > Write New links bug
- Fix default template on Article Import (from MODX Resources)
- removed Rich Text setting from Article Container
- added 'Editing Options' panel with Rich Text option
- Rich Text is now managed on the Article level
- Add check to only search the alias map if it's an array
- Lexicon updates
- Updated Quip to 2.3.3-pl

Articles 1.6.5
===============================
- Add in includeContent param to getResources call in post listing if introtext is empty
- Fix wrong signature after getResources update to 1.6.0-pl
- Add Italian translation
- Use MODX.loadPage instead of direct location changes
- [#8344] Fixed Template combos only show ID and not name with many templates

Articles 1.6.4